<resources>
    <string name="app_name">Screen Break</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Screen Break</string>
    <string name="nav_header_subtitle">Time for you</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_detalle">Detalle</string>
    <string name="menu_gallery">Ayuda</string>
    <string name="menu_slideshow">Acerca de</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</string>
    <string name="Text_Time">Su tiempo del uso total hoy es:</string>

    <string name="Nav_Ayuda">Ayuda</string>
    <string name="Ayuda_text1">¿Adicción al teléfono?</string>
    <string name="Ayuda_text2">Como mejorar tus hábitos</string>
    <string name="Ayuda_text3">Elije las apps que te ayudan a producir</string>
    <string name="Ayuda_text4">Como mantener la calma</string>
    <string name="Ayuda_text5">Como afecta una pantalla al dormir</string>
</resources>