<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ayuda_text1"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="86dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ayuda_text5"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="456dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="240dp"
        android:layout_height="61dp"
        android:text="@string/lorem"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="206dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="238dp"
        android:layout_height="53dp"
        android:text="@string/lorem"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="304dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="247dp"
        android:layout_height="23dp"
        android:text="@string/Ayuda_text3"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="274dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="242dp"
        android:layout_height="57dp"
        android:text="@string/lorem"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="394dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ayuda_text4"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="367dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ayuda_text2"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="179dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="238dp"
        android:layout_height="63dp"
        android:text="@string/lorem"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="483dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="242dp"
        android:layout_height="58dp"
        android:text="@string/lorem"
        android:textAlignment="textStart"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="116dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nav_Ayuda"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="113dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nav_Ayuda"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="198dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nav_Ayuda"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="304dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nav_Ayuda"
        tools:layout_editor_absoluteX="294dp"
        tools:layout_editor_absoluteY="391dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nav_Ayuda"
        tools:layout_editor_absoluteX="292dp"
        tools:layout_editor_absoluteY="486dp" />

</androidx.constraintlayout.widget.ConstraintLayout>