<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.screenbreak.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.screenbreak.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_Nota1"
            app:destination="@id/Nota1" />
        <action
            android:id="@+id/action_nav_gallery_to_Nota2"
            app:destination="@id/Nota2" />
        <action
            android:id="@+id/action_nav_gallery_to_Nota3"
            app:destination="@id/Nota3" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.screenbreak.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_alter"
        android:name="com.example.screenbreak.ui.alter.alterFragment"
        android:label="@string/menu_detalle"
        tools:layout="@layout/fragment_alter" />

    <fragment
        android:id="@+id/Nota1"
        android:name="com.example.screenbreak.ui.gallery.Notas.Nota1Fragment"
        android:label="Nota1"
        tools:layout="@layout/primera_nota">
    </fragment>

    <fragment
        android:id="@+id/Nota2"
        android:name="com.example.screenbreak.ui.gallery.Notas.Nota2Fragment"
        android:label="Nota2"
        tools:layout="@layout/segunda_nota">
    </fragment>

    <fragment
        android:id="@+id/Nota3"
        android:name="com.example.screenbreak.ui.gallery.Notas.Nota3Fragment"
        android:label="Nota3"
        tools:layout="@layout/tercera_nota">
    </fragment>

</navigation>